Soul Of Waifu | First day patch
FIX : q and quit problem
FIX : CharacterAI Addon custom menus

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -3,7 +3,7 @@ ai:
   translate_interface: GoogleTranslater
   voice_interface: Print text
 lang:
-  file: ru.yml
+  file: en.yml
   locale: ru
 pytorch_proc: cpu
 user:
