| DOCS ADD UPDATE
- Первое и самое главное. Была написана первая документация. Возможно не чёткая, грязная и непонятная. Задачей будет сделать её удобной
- Собственный README!
- Аддоны ElevenLabs и CharacterAI теперь отлавливают момент, когда модуль не был полностью проинициализирован
- Menu lib: Получил поддержку colors

--- a/configs/config_default.yaml
+++ b/configs/config_default.yaml
@@ -3,8 +3,8 @@ ai:
   translate_interface: GoogleTranslater
   voice_interface: ElevenLabs Voice
 lang:
-  file: ru.yml
-  locale: ru
+  file: en.yml
+  locale: en
 pytorch_proc: cpu
 user:
   input_interface: Keybord Input
